--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,12 @@
 [tool.poetry]
-name = "speckle-automate-py"
+name = "speckle-automate-basic-clash-demo"
 version = "0.1.0"
-description = "Example function for Speckle Automate using specklepy"
-authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
+description = "Example function for Speckle Automate using specklepy and PyMesh"
+authors = ["Jonathon Broughton <jonathon@speckle.systems>"]
 readme = "README.md"
-packages = [{include = "src/speckle_automate_py"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 specklepy = "2.17.8"
 
 [tool.poetry.group.dev.dependencies]
@@ -15,7 +14,6 @@ black = "^23.3.0"
 mypy = "^1.3.0"
 ruff = "^0.0.271"
 pytest = "^7.4.2"
-# specklepy = {path = "../specklepy", develop = true}
 
 [build-system]
 requires = ["poetry-core"]
