--- a/requirements.txt
+++ b/requirements.txt
@@ -643,3 +643,51 @@ yarl==1.9.2 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:f3b078dbe227f79be488ffcfc7a9edb3409d018e0952cf13f15fd6512847f3f7 \
     --hash=sha256:f4e2d08f07a3d7d3e12549052eb5ad3eab1c349c53ac51c209a0e5991bbada78 \
     --hash=sha256:f7a3d8146575e08c29ed1cd287068e6d02f1c7bdff8970db96683b9591b86ee7
+
+yarl~=1.9.2
+gql~=3.4.1
+backoff~=2.2.1
+multidict~=6.0.4
+requests~=2.31.0
+websockets~=10.4
+pytest~=7.4.2
+h11~=0.14.0
+pip~=23.3.1
+attrs~=23.1.0
+wheel~=0.40.0
+mypy~=1.6.1
+idna~=3.4
+sniffio~=1.3.0
+black~=23.10.0
+platformdirs~=3.11.0
+packaging~=23.2
+pathspec~=0.11.2
+click~=8.1.5
+httpcore~=1.0.2
+certifi~=2023.7.22
+setuptools~=65.5.0
+numpy~=1.25.2
+pluggy~=1.3.0
+Deprecated~=1.2.14
+iniconfig~=2.0.0
+trimesh~=4.0.4
+anyio~=4.0.0
+pydantic~=2.4.2
+urllib3~=1.26.18
+specklepy~=2.17.11
+stringcase~=1.2.0
+ujson~=5.8.0
+wrapt~=1.16.0
+httpx~=0.25.1
+Pillow~=10.1.0
+docutils~=0.20.1
+sphinx~=7.0.1
+Jinja2~=3.1.2
+filelock~=3.12.2
+Pygments~=2.15.1
+pytz~=2023.3.post1
+networkx~=3.1
+scipy~=1.11.1
+psutil~=5.9.5
+python-dotenv~=1.0.0
+pymesh~=1.0.2
