--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
   "dockerFile": "../Dockerfile",
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  // "postCreateCommand": "poetry install --no-root",
+  "postCreateCommand": "poetry install --no-root",
 
   // Configure tool-specific properties.
   "customizations": {
