--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ black = "^23.3.0"
 mypy = "^1.3.0"
 ruff = "^0.0.271"
 pytest = "^7.4.2"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
